[package]
name = "offline_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = "0.12.1"
hex = "0.4.3"
secp256k1 = "0.28.0"
ripemd = "0.1.3"
sha256 = "1.1.2"
sha3 = "0.10.8"

[profile.release]
strip=true
opt-level="s"